# ss-1

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  logger.c  logger.h  main.c  ss.c  ss.h  thread.c  thread.h
