SET(SS_PUBLIC_HEADERS ss.h)
SET(SS_PRIVATE_HEADERS thread.h)
SET(SS_HEADERS ${SS_PUBLIC_HEADERS} ${SS_PRIVATE_HEADERS})
SET(SS_SOURCES ${SS_HEADERS} main.c ss.c thread.c)

SET(SS_EXECUTABLE ss_executable)
SET(SS_EXECUTABLE_OUTPUT ss)
ADD_EXECUTABLE(${SS_EXECUTABLE} ${SS_SOURCES})
SET_TARGET_PROPERTIES(${SS_EXECUTABLE} PROPERTIES OUTPUT_NAME ${SS_EXECUTABLE_OUTPUT})
TARGET_LINK_LIBRARIES(${SS_EXECUTABLE} ev pthread)
